papers/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: papers
  labels:
    istio-injection: disabled
