papers/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: papers
  namespace: papers
spec:
  hosts:
    - paper.observer
  gateways:
    - gateways/primary
  http:
    - route:
        - destination:
            host: papers
            port:
              number: 80
